flex 05 modal: Fix spacing between continue,cancel

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -51,6 +51,7 @@ body {
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  margin-right: 5px;
 }
 
 button.continue {
